[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Extensions/Example/elements/Instructions.gd" type="Script" id=1]
[ext_resource path="res://src/Extensions/Example/elements/image assets/paths.png" type="Texture" id=2]
[ext_resource path="res://src/Extensions/Example/elements/image assets/main.png" type="Texture" id=3]
[ext_resource path="res://src/Extensions/Example/elements/image assets/special.png" type="Texture" id=4]
[ext_resource path="res://src/Extensions/Example/elements/NewExtension.tscn" type="PackedScene" id=5]

[node name="Instructions" type="Panel"]
margin_right = 399.0
margin_bottom = 301.0
rect_min_size = Vector2( 150, 150 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 11.0
margin_right = -7.0
margin_bottom = -11.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
self_modulate = Color( 0.415686, 0.415686, 0.415686, 1 )
margin_right = 385.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Title" type="Label" parent="VBoxContainer/ColorRect"]
margin_right = 385.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 0
text = "Instructions"
align = 1
valign = 1

[node name="Content" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 385.0
margin_bottom = 279.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Content"]
margin_right = 373.0
margin_bottom = 1361.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Content/VBoxContainer"]
margin_right = 373.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Click here to skip all the reading and
Create the extension directly ;)"
align = 1
valign = 1

[node name="Create" type="Button" parent="VBoxContainer/Content/VBoxContainer/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
clip_text = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 54.0
margin_right = 373.0
margin_bottom = 159.0
focus_mode = 2
text = "This is a simple example of how you can make an extension for pixelorama.
(We will be making an extension called \"Example\")

First there must be an \"extension.json\" file on the path (src/Extensions/<Extension Name>/extension.json) like in te image below:"
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="path" type="TextureRect" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 163.0
margin_right = 373.0
margin_bottom = 313.0
rect_min_size = Vector2( 0, 150 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 317.0
margin_right = 373.0
margin_bottom = 347.0
focus_mode = 2
text = "The \"extension.json\" file should contain the code like the one below (the code can be selected and copied):"
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 351.0
margin_right = 373.0
margin_bottom = 516.0

[node name="Code" type="RichTextLabel" parent="VBoxContainer/Content/VBoxContainer/HBoxContainer"]
margin_right = 326.0
margin_bottom = 165.0
size_flags_horizontal = 3
text = "{
    \"name\": \"Example\",
    \"display_name\": \"Anything you want\",
    \"description\": \"What the extension does\",
    \"author\": \"Your Name\",
    \"version\": \"0.1\",
    \"license\": \"MIT\",
    \"nodes\": [
        \"Main.tscn\"
    ]
}"
fit_content_height = true

[node name="Button" type="Button" parent="VBoxContainer/Content/VBoxContainer/HBoxContainer"]
margin_left = 330.0
margin_right = 373.0
margin_bottom = 165.0
text = "Copy"

[node name="RichTextLabel4" type="RichTextLabel" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 520.0
margin_right = 373.0
margin_bottom = 640.0
focus_mode = 2
text = "
EXPLANATION:
The nodes inside \"nodes\" array are the ones that will automatically be instanced by Pixelorama as soon as the Extension is loaded. In this example \"Main.tscn\" will be instanced in pixelorama and the rest (instancing other nodes, handling stuff etc.) will be done through a script you attached to it (Main.gd for this example)"
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="Main_gd" type="TextureRect" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 644.0
margin_right = 373.0
margin_bottom = 944.0
rect_min_size = Vector2( 0, 300 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 948.0
margin_right = 373.0
margin_bottom = 1083.0
focus_mode = 2
text = "
EXPORT:
1) To export go to \"Project>Export\" and choose any platform option (the extension should work on other platforms regardless of platform)

2) Below the \"Name\" field there are a few tabs, go to \"Resources\" tab. in the \"Filters to include...\" field type *.json."
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="include" type="TextureRect" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 1087.0
margin_right = 373.0
margin_bottom = 1237.0
rect_min_size = Vector2( 0, 150 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="RichTextLabel6" type="RichTextLabel" parent="VBoxContainer/Content/VBoxContainer"]
margin_top = 1241.0
margin_right = 373.0
margin_bottom = 1361.0
focus_mode = 2
text = "
3) Now select \"Export PCK/Zip\" and export the extension with either \".zip\" or \".pck\". The export must also be of the same name as the extension (Example.pck or Example.zip in this case)

4) Loading the extension is much simpler, simply drag and drop it in pixelorama."
fit_content_height = true
scroll_active = false
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewExtension" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="mouse_entered" from="." to="." method="_on_Main_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Main_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_Instructions_visibility_changed"]
[connection signal="gui_input" from="VBoxContainer/ColorRect/Title" to="." method="_on_Title_gui_input"]
[connection signal="pressed" from="VBoxContainer/Content/VBoxContainer/Label/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="VBoxContainer/Content/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
